# cookiecutter-py-package

./: README.md  README.rst  cookiecutter.json  requirements-dev.txt
hooks/: post_gen_project.py
{{cookiecutter.name}}/: .coveragerc  .gitignore  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  setup.py
{{cookiecutter.name}}/.github/workflows/: pytest.yml
