[project]
name = "{{cookiecutter.name}}"
dynamic = ["version", "dependencies"]
authors = [
    { name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" },
]
maintainers = [
    { name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" },
]
description = "{{cookiecutter.description}}"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.setuptools_scm]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--import-mode=importlib"]


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }


[build-system]
requires = ["setuptools>=67.0", "setuptools_scm>=7.1.0"]
build-backend = "setuptools.build_meta"
